<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment"
    android:background="@color/primary_color"
    >

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                >

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/flip_en_bn_bg"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/bnBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/bold"
                        android:text="বাং"
                        android:background="@drawable/flip_en_bn_bg"
                        android:backgroundTint="#00FFFFFF"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/enBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/flip_en_bn_bg"
                        android:backgroundTint="@color/yellow_color"
                        android:text="En"
                        android:textAlignment="center"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                >

                <EditText
                    android:id="@+id/searchBar"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/grey_bg"
                    android:drawableStart="@drawable/search_icon"
                    android:fontFamily="@font/regular"
                    android:hint="@string/search_hint"
                    android:textColorHint="@color/white"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:drawablePadding="8dp"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/bell"
                    android:layout_marginStart="8dp"
                    />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerImageSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                >

            </androidx.viewpager2.widget.ViewPager2>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                >
                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:dotsColor="@color/white"
                    app:dotsSize="10dp"
                    app:dotsSpacing="3dp"
                    app:selectedDotColor="@color/yellow_color"
                    android:orientation="horizontal"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                >


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/grey_bg"
                    android:backgroundTint="#FFCCCC"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="@string/has_martyr_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/has_martyr_count_text"
                        android:textColor="#B12424"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/grey_bg"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"

                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="@string/has_attck_martyr_text"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/has_injurd_count_text"
                        android:textColor="@color/yellow_color"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallary_text"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    />
                <TextView
                    android:id="@+id/seeAllView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:clickable="true"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textColor="@color/soft_yellow_color"
                    android:fontFamily="@font/regular"
                    />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view3"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollbars="none"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </androidx.recyclerview.widget.RecyclerView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/martyr_text"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    />
                <TextView
                    android:id="@+id/seeAllView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:clickable="true"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textColor="@color/soft_yellow_color"
                    android:fontFamily="@font/regular"
                    />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view2"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollbars="none"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anti_dis_student"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    />

                <TextView

                    android:id="@+id/seeAllView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/see_all"
                    android:textColor="@color/soft_yellow_color"
                    android:textSize="18sp"
                    android:textStyle="normal" />


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view1"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>



    </ScrollView>

</FrameLayout>